--- a/index.html
+++ b/index.html
@@ -496,12 +496,12 @@
       let time = { vert: [], hor: [] };
       let fillers = { vert: [], hor: [] };
       for (let i = 1; i <= 8; i++) {
-        valence.vert.push(`materials/valence_vert_${i}${randomAB()}.JPG`);
-        valence.hor.push(`materials/valence_hor_${i}${randomAB()}.JPG`);
-        time.vert.push(`materials/time_vert_${i}${randomAB()}.JPG`);
-        time.hor.push(`materials/time_hor_${i}${randomAB()}.JPG`);
-        fillers.vert.push(`materials/filler_vert_${i}.JPG`);
-        fillers.hor.push(`materials/filler_hor_${i}.JPG`);
+        valence.vert.push(`materials/valence_vert_${i}${randomAB()}.jpg`);
+        valence.hor.push(`materials/valence_hor_${i}${randomAB()}.jpg`);
+        time.vert.push(`materials/time_vert_${i}${randomAB()}.jpg`);
+        time.hor.push(`materials/time_hor_${i}${randomAB()}.jpg`);
+        fillers.vert.push(`materials/filler_vert_${i}.jpg`);
+        fillers.hor.push(`materials/filler_hor_${i}.jpg`);
       }
       return { valence, time, fillers };
     }
