--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     const subjectID = jsPsych.randomization.randomID(10);
     const filename = `${subjectID}.csv`;
     const filenameNotConsented = `${subjectID}_notConsented.csv`;
-    const filenameNotNativeLanguage = `${subjectID}_notNativeLanguage.csv`;
+    const filenameNotNativeLanguage = `${subjectID}_nonNative.csv`;
 
     const pcFormIntro = {
       type: jsPsychHtmlButtonResponse,
