--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     const subjectID = jsPsych.randomization.randomID(10);
     const filename = `${subjectID}.csv`;
-    const filenameNotConsented = `${subjectID}_notConsented.csv`;
+    const filenameNotConsented = `${subjectID}_nonConsented.csv`;
     const filenameNotNativeLanguage = `${subjectID}_nonNative.csv`;
 
     const pcFormIntro = {
