--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     const subjectID = jsPsych.randomization.randomID(10);
     const filename = `${subjectID}.csv`;
-    const filenameNotConsented = `${subjectID}_nonConsented.csv`;
-    const filenameNotNativeLanguage = `${subjectID}_nonNative.csv`;
+    const filenameNotConsented = `${subjectID}_non-consented.csv`;
+    const filenameNotNativeLanguage = `${subjectID}_non-native.csv`;
 
     const pcFormIntro = {
       type: jsPsychHtmlButtonResponse,
