--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         }
         </style>
         <div class="consent-wrapper">
-          <h2 style="text-align: center;">美術鑑賞における画像への好ましさに関する研究に関する研究</h2>
+          <h2 style="text-align: center;">美術鑑賞における画像への好ましさに関する研究</h2>
             <h3 style="padding-top: 5em;">1. この研究について</h3>
               <h4>(1) 研究の意義、目的、方法など</h4>
                 <p>　本研究は、みなさんの画像への好ましさを調べるものです。この研究により、人間に特有の美的感覚のメカニズムに関する手がかりが得られる可能性があります。</p>
