--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     const pcFormIntro = {
       type: jsPsychHtmlButtonResponse,
       stimulus: `
-        <h3 style="color: red;">このフォームは<h2 style="color: red;">PC</h2>回答者向けです。</h3>
+        <h3 style="color: red;">このフォームはPC回答者向けです。</h3>
           <p>本研究では、調査・実験を行うにあたりPCを使用します。</p>
           <p>ウィンドウを最大化できましたら、ボタンをクリックして研究概要の説明へ進んでください。</p>
           <p>（実験終了まで、ウィンドウは最大化した状態にしてください。）</p>
