--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       button_label: "次へ",
       on_load: () => {
         const el = document.getElementById("emailConsent");
-        if (el) el.textContent = "daishin.morikawa" + "@" + "gmail.com";
+        if (el) el.textContent = "dmorikawa" + "@" + "outlook.jp";
       },
     };
 
@@ -176,7 +176,7 @@
           choices: "NO KEYS",
           on_load: () => {
             const el = document.getElementById("emailNotNativeLanguage");
-            if (el) el.textContent = "daishin.morikawa" + "@" + "gmail.com";
+            if (el) el.textContent = "dmorikawa" + "@" + "outlook.jp";
           },
         },
       ],
@@ -208,7 +208,7 @@
           choices: "NO KEYS",
           on_load: () => {
             const el = document.getElementById("emailNotConsented");
-            if (el) el.textContent = "daishin.morikawa" + "@" + "gmail.com";
+            if (el) el.textContent = "dmorikawa" + "@" + "outlook.jp";
           },
         },
       ],
@@ -567,7 +567,7 @@
       choices: "NO KEYS",
       on_load: () => {
         const el = document.getElementById("emailEnd");
-        if (el) el.textContent = "daishin.morikawa" + "@" + "gmail.com";
+        if (el) el.textContent = "dmorikawa" + "@" + "outlook.jp";
       },
     };
 
