Change title in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>美術鑑賞における画像への好ましさに関する研究</title>
+    <title>募集終了</title>
     <script src="jspsych/dist/jspsych.js"></script>
     <script src="jspsych/dist/plugin-survey-multi-choice.js"></script>
     <script src="jspsych/dist/plugin-html-button-response.js"></script>
